# SmartRead

./: .gitignore  CONTEXT.md  README.md  pyproject.toml  skills-lock.json
.smartread/: smartread.db
docs/: SMARTREAD_DISCOVERY.md  SMARTREAD_MVP_PRD.md
prototypes/smartread_chapter_learning/: NOTES.md  streamlit_app.py
smartread_api/: __init__.py  chapter_concepts.py  chapter_quizzes.py  chapter_summaries.py  concepts_evaluation.py  main.py  quiz_evaluation.py  summary_evaluation.py  uploaded_books.py
smartread_frontend/: __init__.py  app.py  health.py  uploads.py
tests/: pdf_fixtures.py  test_api_chapter_boundary_review.py  test_api_chapter_detection.py  test_api_chapter_summaries.py  test_api_concepts_takeaways.py  test_api_dashboard.py  test_api_extraction.py  test_api_health.py  test_api_persistence_privacy_recovery.py  test_api_quizzes.py  test_api_uploads.py  test_concepts_evaluation.py  test_frontend_health_status.py  test_frontend_uploads.py  test_quiz_evaluation.py  test_streamlit_shell.py  test_streamlit_upload.py  test_summary_evaluation.py
