[project]
name = "smartread"
version = "0.1.0"
description = "SmartRead MVP application shell."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.125.0",
    "httpx>=0.28.0",
    "pypdf>=6.4.0",
    "python-multipart>=0.0.20",
    "streamlit>=1.52.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
